--- a/css/imageuploader.less
+++ b/css/imageuploader.less
@@ -224,6 +224,7 @@
     top:100px;
     z-index: 1000;
     text-align: center;
+    min-height: 380px;
     .toggle{
         position: absolute;
         z-index: 10000;
